# sign-speak-video-call-sample

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/patches/: agora-react-uikit+1.2.0.patch
frontend/src/: App.js  network.js
